# littleshell

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c
includes/: builtin_functions.h  clear_command_line.h  environment.h  error_manager.h  exec_all_commands.h  minishell.h  parse_commands.h  parse_full_cycle.h  read_line.h  signal_handlers.h  test_minishell.h  word_work.h
src/: read_line.c
src/builtin_functions/: cd.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c  write_err.c
src/builtin_functions/env/: env.c
src/builtin_functions/exit/: exit.c
src/builtin_functions/export/: export.c
src/builtin_functions/unset/: unset.c
src/classes/environment/: _environment.h  environment_add.c  environment_del.c  environment_get_status.c  environment_get_value.c  environment_new.c  environment_print.c  environment_print_sorted.c  environment_remove.c  environment_set_status.c  environment_transfer_control.c  hidden_environment.h
src/classes/word_work/: _word_work.h  hidden_word_work.h  word_work_add_char.c  word_work_add_size.c  word_work_delete.c  word_work_expand.c  word_work_new.c  word_work_ret_word.c
src/clear_comand_line/: clear_comand_line.c
src/clear_command_line/: clear_command_line.c
src/errors/: error_manager.c
src/exec_all_commands/: exec_all_commands.c  exec_one_command.c  execution.c  open_and_check_redirects.c  open_output_redirects.c  parse_stop_status.c  search_path_command.c
src/parse_commands/: destroy_command.c  full_cycle_blocks.c  full_cycle_is_redirect.c  parse_and_go_next.c  parse_commands.c  parse_redirects.c  parse_single_command.c  pre_parse.c  separate_commands.c  shell_word_split_with_env.c  test_cmd_print.c
src/read_line/: read_line.c
src/signal_handlers/: handlers.c
unit_testing/: CMakeLists.txt  environment_class_test.cpp  parse_test.cpp
